--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -49,6 +49,13 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.38.1"
     kapt "com.google.dagger:hilt-compiler:2.38.1"
 
+    // ViewModel Hilt
+    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
+    kapt 'androidx.hilt:hilt-compiler:1.0.0'
+
+    // Activity Ktx
+    implementation "androidx.activity:activity-ktx:1.5.1"
+
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
@@ -68,4 +75,9 @@ dependencies {
 
     // Rounded ImageView
     implementation 'com.makeramen:roundedimageview:2.3.0'
+
+    // 네이버 지도 SDK
+    implementation('com.naver.maps:map-sdk:3.15.0') {
+        exclude group: 'com.android.support'
+    }
 }
