feat: MapActivity 네이버맵 구현

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,7 @@ pluginManagement {
         maven {
             url 'https://naver.jfrog.io/artifactory/maven/'
         }
+        maven { url 'https://jitpack.io' }
     }
 }
 dependencyResolutionManagement {
@@ -16,6 +17,7 @@ dependencyResolutionManagement {
         maven {
             url 'https://naver.jfrog.io/artifactory/maven/'
         }
+        maven { url 'https://jitpack.io' }
     }
 }
 rootProject.name = "Bmap"
