--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,9 @@
         tools:targetApi="31">
 
         <activity
-            android:name="com.app.hackathon.presentation.view.MapActivity"
-            android:exported="true">
+            android:name="com.app.hackathon.presentation.view.map.MapActivity"
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
