--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.0'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.android.gms:play-services-location:20.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -92,4 +93,10 @@ dependencies {
     // explicitly depend on RxJava's latest version for bug fixes and new features.
     // (see https://github.com/ReactiveX/RxJava/releases for latest 3.x.x version)
     implementation 'io.reactivex.rxjava3:rxjava:3.0.6'
+
+    // Stroke TextView
+    implementation 'com.github.Maggie-Wan:StrokTextView:v1.0'
+
+    // Permission library
+    implementation 'io.github.ParkSangGwon:tedpermission-rx3:3.3.0'
 }
