--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="com.app.hackathon.presentation.view.search.VoiceSearchActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
