feat: 문자 검색 액티비티 생성

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,10 @@
         <activity
             android:name="com.app.hackathon.presentation.view.search.VoiceSearchActivity"
             android:exported="false" />
+
+        <activity
+            android:name="com.app.hackathon.presentation.view.search.TextSearchActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
