feat: 검색 히스토리 데이터베이스 구현

--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -44,4 +44,8 @@ dependencies {
     // Hilt
     implementation "com.google.dagger:hilt-android:2.38.1"
     kapt "com.google.dagger:hilt-compiler:2.38.1"
+
+    // RxKotlin
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation "io.reactivex.rxjava3:rxkotlin:3.0.0"
 }
