--- a/data/build.gradle
+++ b/data/build.gradle
@@ -57,4 +57,8 @@ dependencies {
     // retrofit2
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+
+    // RxKotlin
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation "io.reactivex.rxjava3:rxkotlin:3.0.0"
 }
