--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -88,11 +88,12 @@ dependencies {
     // 네이버 지도 SDK
     implementation('com.naver.maps:map-sdk:3.15.0')
 
-    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     // Because RxAndroid releases are few and far between, it is recommended you also
     // explicitly depend on RxJava's latest version for bug fixes and new features.
     // (see https://github.com/ReactiveX/RxJava/releases for latest 3.x.x version)
-    implementation 'io.reactivex.rxjava3:rxjava:3.0.6'
+    // RxKotlin
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation "io.reactivex.rxjava3:rxkotlin:3.0.0"
 
     // Stroke TextView
     implementation 'com.github.Maggie-Wan:StrokTextView:v1.0'
