--- a/data/build.gradle
+++ b/data/build.gradle
@@ -60,6 +60,8 @@ dependencies {
     // retrofit2
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.10.0"
+    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
 
     // RxKotlin
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
